compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_variant_in_pattern.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\nimport mod\n\nfn func(arg) {\n  case arg {\n    mod.Variant1 -> todo\n    mod.Variant2 -> todo\n  }\n}\n"
---
----- BEFORE RENAME
-- mod.gleam
pub type Type { Variant1 Variant2 }

-- app.gleam

import mod

fn func(arg) {
  case arg {
    mod.Variant1 -> todo
    ↑▔▔                 
    mod.Variant2 -> todo
  }
}


----- AFTER RENAME
-- mod.gleam
pub type Type { Variant1 Variant2 }

-- app.gleam

import mod as module

fn func(arg) {
  case arg {
    module.Variant1 -> todo
    module.Variant2 -> todo
  }
}
