compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_value_in_aliased_module.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\nimport mod as the_module\n\npub fn main() {\n  the_module.wibble()\n}\n"
---
----- BEFORE RENAME
-- mod.gleam

pub fn wibble() {
  wibble()
}


-- app.gleam

import mod as the_module

pub fn main() {
  the_module.wibble()
             ↑       
}


----- AFTER RENAME
-- mod.gleam

pub fn some_function() {
  some_function()
}


-- app.gleam

import mod as the_module

pub fn main() {
  the_module.some_function()
}
